--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
+    "vite-svg-loader": "^4.0.0",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
   }
