--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "flowbite": "^1.6.5",
+    "howler": "^2.2.3",
     "pinia": "^2.0.36",
+    "swiper": "^9.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
